DHFPROD-8502: ImageGalleryMulti widget

--- a/examples/entity-viewer-v2/entity-viewer-client/src/main/ml-modules/root/explore-data/ui-config/config.json
+++ b/examples/entity-viewer-v2/entity-viewer-client/src/main/ml-modules/root/explore-data/ui-config/config.json
@@ -660,7 +660,7 @@
       }
     },
     "imageGallery": {
-      "component": "ImageGallery",
+      "component": "ImageGalleryMulti",
       "config": {
         "style": {
           "height": "150px",
